[package]
name = "windows-test"
version = "0.1.0"
authors = ["skeleten <janpelle.thomson@stud.tu-darmstadt.de>"]

[dependencies]
winapi = "*" # { path = "../winapi-rs/" }
user32-sys = "*" # { path = "../winapi-rs/lib/user32/" }
gdi32-sys = "*" # { path = "../winapi-rs/lib/gdi32/" }
kernel32-sys = "*" # { path = "../winapi-rs/lib/kernel32/" }
wio = "*"
bitflags = "*"
